# iMarker_detector_ros

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  package.xml  requirements.txt  setup.py
config/: README.md  cam_homography.yaml  cfg_dual_ids.yaml  cfg_dual_usb.yaml  cfg_off.yaml  cfg_single_rs.yaml  config.py  config.yaml  config_ids.yaml  config_mono.yaml  config_rs.yaml  config_usb.yaml  configs.yaml  double_camera.rviz  mono_camera.rviz
docs/: aruco_ros_csr_marker.launch
launch/: csr_detector_ids.launch  csr_detector_mono.launch  csr_detector_rs.launch  csr_detector_usb.launch  csr_detector_usbMono.launch  iMarker_detector_ids.launch  iMarker_detector_offline.launch  iMarker_detector_rs.launch  iMarker_detector_usb.launch  imarker_detector_dual_ids.launch  imarker_detector_dual_ids.launch.py  imarker_detector_dual_usb.launch  imarker_detector_dual_usb.launch.py  imarker_detector_single_off.launch  imarker_detector_single_off.launch.py  imarker_detector_single_rs.launch  imarker_detector_single_rs.launch.py
resource/: imarker_detector_ros
rviz/: rviz_single_vision.rviz
src/: dualvision_ids.py  dualvision_usb.py  main_ids.py  main_rs.py  main_usb.py  main_usbMono.py  runner_ids.py  runner_offline.py  runner_rs.py  runner_usb.py  singlevision_off_rosbag.py  singlevision_rs.py
src/marker_detector/: arucoDetector.py
src/utils/: argParser.py  createRosMessage.py  readConfig.py  valueParser.py
