<?xml version="1.0"?>
<package format="2">
  <name>imarker_detector_ros</name>
  <version>1.0.0</version>
  <license>SNT NON-COMMERCIAL</license>
  <description>iMarker Detector ROS package</description>
  <maintainer email="ali.tourani@uni.lu">Ali Tourani</maintainer>
  <url type="website">https://github.com/snt-arg/iMarker_detector_ros</url>
  <author email="ali.tourani@uni.lu">Ali TOURANI</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
